# VenusFactory

./: .env.example  .gitignore  README.md  README_CN.md  Scripts_notebook.ipynb  docker-compose.yaml  environment.yaml  environment.yml  install.py  install_config.json  pyproject.toml  requirements.txt  requirements_for_macOS.txt  start_server.py
.install/: install.py  install_system.py
agent/: README.md  config.py  file_manager.py
agent/mutation/: protein_mutation_tool.py
agent/pbs/: pbs.py
agent/slurm/: slurm.py
ckpt/demo/: demo_solubility.json
data/DLKcat/: DLKcat_HF.json
data/EpHod/: EpHod_HF.json
data/GO_BP/: GO_BP_ESMFold_HF.json
data/VenusVaccine_BacteriaBinary/: VenusVaccine_BacteriaBinary_HF.json
data/VenusVaccine_TumorBinary/: VenusVaccine_TumorBinary_HF.json
data/VenusVaccine_VirusBinary/: VenusVaccine_VirusBinary_HF.json
data/VenusX/: VenusX_Frag_Act_MF50_HF.json  VenusX_Frag_Act_MF70_HF.json  VenusX_Frag_Act_MF90_HF.json  VenusX_Frag_BindI_MF50_HF.json  VenusX_Frag_BindI_MF70_HF.json  VenusX_Frag_BindI_MF90_HF.json  VenusX_Frag_Dom_MF50_HF.json  VenusX_Frag_Dom_MF70_HF.json  VenusX_Frag_Dom_MF90_HF.json  VenusX_Frag_Evo_MF50_HF.json  VenusX_Frag_Evo_MF70_HF.json  VenusX_Frag_Evo_MF90_HF.json  VenusX_Frag_Motif_MF50_HF.json  VenusX_Frag_Motif_MF70_HF.json  VenusX_Frag_Motif_MF90_HF.json  VenusX_Res_Act_MF50_HF.json  VenusX_Res_Act_MF70_HF.json  VenusX_Res_Act_MF90_HF.json  VenusX_Res_Act_MP30_HF.json  VenusX_Res_Act_MP50_HF.json  VenusX_Res_Act_MP70_HF.json  VenusX_Res_Act_MP90_HF.json  VenusX_Res_Act_X_HF.json  VenusX_Res_BindB_MP50_HF.json  VenusX_Res_BindB_MP70_HF.json  VenusX_Res_BindB_MP90_HF.json  VenusX_Res_BindI_MF50_HF.json  VenusX_Res_BindI_MF70_HF.json  VenusX_Res_BindI_MF90_HF.json  VenusX_Res_BindI_MP30_HF.json  VenusX_Res_BindI_MP50_HF.json  VenusX_Res_BindI_MP70_HF.json  VenusX_Res_BindI_MP90_HF.json  VenusX_Res_BindI_X_HF.json  VenusX_Res_Dom_MF50_HF.json  VenusX_Res_Dom_MF70_HF.json  VenusX_Res_Dom_MF90_HF.json  VenusX_Res_Dom_MP30_HF.json  VenusX_Res_Dom_MP50_HF.json  VenusX_Res_Dom_MP70_HF.json  (+21 more)
demo/: training_args.json
docker/: Dockerfile
docs/manual/: AdvancedToolsManual_CN.md  AdvancedToolsManual_EN.md  AgentManual_CN.md  AgentManual_EN.md  DownloadManual_EN.md  DownloadManual_ZH.md  EvaluationManual_EN.md  EvaluationManual_ZH.md  PredictionManual_EN.md  PredictionManual_ZH.md  QAManual_EN.md  QAManual_ZH.md  QuickTools_CN.md  QuickTools_EN.md  ReportManual_CN.md  ReportManual_EN.md  TrainingManual_EN.md  TrainingManual_ZH.md
download/: P60002.fasta  README.md  ncbi.txt
download/calculated_property_example/: A0A0C5B5G6_physchem_property.json  A0A0C5B5G6_property.json  A0A0C5B5G6_rsa_property.json  A0A0C5B5G6_sasa_property.json  A0A0C5B5G6_secondary_structure_property.json
example/database/: README.md
example/download/: README.md
example/mutation/: README.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
mutation/: README.md
mutation/example/: A0A0C5B5G6_esm1v.csv  A0A0C5B5G6_esm2.csv  A0A0C5B5G6_protssn.csv  A0A1B0GTW7_esmif1.csv  A0A1B0GTW7_mifst.csv  A0A1B0GTW7_prosst.csv  A0A1B0GTW7_saprot.csv
script/embed/: esm2.sh
script/get_structure_seq/: get_esm3_structure_seq.sh  get_foldseek_structure_seq.sh  get_prosst_structure_seq.sh  get_secondary_structure_seq.sh
script/mutation/: easy_mutation.sh  esm1b.sh  esm1v.sh  esm2.sh  esmif1.sh  mifst.sh  prosst.sh  protssn.sh  saprot.sh
script/property/: calculate_all_property.sh  calculate_physchem.sh  calculate_rsa.sh  calculate_sasa.sh  calculate_secondary_structure.sh
script/tools/: esmfold.sh
script/train/: README.md  train_splm.sh
src/: api_server.py  config.py  constant.json  eval.py  evaluate.py  exceptions.py  fast_api.py  logger.py  mcp_server.py  mcp_venusfactory.py  predict.py  predict_batch.py  train.py  webui.py  webui_v2.py
src/agent/: chat_agent.py  chat_agent_utils.py  chat_graph.py  guardrails.py  hooks.py  models.py  prompts.py  retry.py  sandbox.py  session.py  skills.py  tool_context.py  tracing.py
src/agent_eval/: config.py  evaluation.py  llm.py
src/config/: server_config.py
src/data/: collator.py  dataloader.py  get_esm3_structure_seq.py  get_foldseek_structure_seq.py  get_prosst_str_token.py  get_secondary_structure_seq.py  get_ss_fs_esm3_seq.py  stats_data.json  structure_seq_merge.py
src/models/: adapter_model.py  model_factory.py
src/mutation/: utils.py
src/property/: ankh.py  calculate_all_property.py  calculate_physchem.py  calculate_rsa.py  calculate_sasa.py  calculate_secondary_structure.py  esm2.py  protbert.py  prott5.py  rsa.py
src/tools/: __init__.py  path_sanitizer.py  tools_agent_hub.py
src/training/: metrics.py  trainer.py
src/utils/: args.py  data_utils.py
src/web/: advanced_tool_tab.py  chat_tab.py  chat_tab_owl.py  chat_tools.py  comprehensive_tab.py  dash_viewer.py  download_tab.py  download_tool_tab.py  eval_tab.py  prompts.py  (+17 more)
tests/: conftest.py  test_advanced_tools_meta.py  test_analytics_store.py  test_chat_session_security.py  test_config.py  test_exceptions.py  test_guardrails.py  test_hooks.py  test_logger.py  test_models.py  test_retry.py  test_sandbox.py  test_session.py  test_tool_context.py  test_tracing.py
(+849 files in other folders)
