[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "venus-factory"
version = "0.1.0"
description = "venus-factory"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Authlib>=1.6.5",
    "Brotli>=1.1.0",
    "GitPython>=3.1.45",
    "Jinja2>=3.1.4",
    "Markdown>=3.8.2",
    "MarkupSafe>=2.1.5",
    "PyJWT>=2.10.1",
    "PyYAML>=6.0.2",
    "Pygments>=2.19.2",
    "SQLAlchemy>=2.0.43",
    "SecretStorage>=3.5.0",
    "accelerate>=1.10.1",
    "aiofiles>=24.1.0",
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.12.15",
    "aiosignal>=1.4.0",
    "annotated-types>=0.7.0",
    "anyio>=4.10.0",
    "asttokens>=3.0.0",
    "attrs>=25.3.0",
    "beartype>=0.22.6",
    "bio>=1.8.0",
    "biopython>=1.85",
    "biothings_client>=0.4.1",
    "biotite>=1.4.0",
    "biotraj>=1.2.2",
    "bitsandbytes>=0.47.0",
    "cachetools>=6.2.2",
    "certifi>=2025.8.3",
    "cffi>=2.0.0",
    "charset-normalizer>=3.4.3",
    "click>=8.2.1",
    "cloudpathlib>=0.22.0",
    "contourpy>=1.3.3",
    "cryptography>=46.0.3",
    "cycler>=0.12.1",
    "cyclopts>=4.3.0",
    "datasets>=4.0.0",
    "decorator>=5.2.1",
    "dill>=0.4.0",
    "diskcache>=5.6.3",
    "distro>=1.9.0",
    "dnspython>=2.8.0",
    "docstring_parser>=0.17.0",
    "docutils>=0.22.3",
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "email-validator>=2.3.0",
    "esm>=3.2.1.post1",
    "exceptiongroup>=1.3.1",
    "executing>=2.2.0",
    "fake-useragent>=2.2.0",
    "fastapi-mcp>=0.4.0",
    "fastapi>=0.116.1",
    "fastmcp>=2.13.1",
    "ffmpy>=0.6.1",
    "filelock>=3.13.1",
    "fonttools>=4.59.2",
    "frozenlist>=1.7.0",
    "fsspec>=2024.6.1",
    "gitdb>=4.0.12",
    "gprofiler-official>=1.0.0",
    "gradio>=5.44.1",
    "gradio_client>=1.12.1",
    "gradio_molecule3d>=0.0.7",
    "greenlet>=3.2.4",
    "groovy>=0.1.2",
    "h11>=0.16.0",
    "hf-xet>=1.1.9",
    "httpcore>=1.0.9",
    "httpx-sse>=0.4.3",
    "httpx>=0.28.1",
    "huggingface-hub>=0.34.4",
    "idna>=3.10",
    "ipython>=9.5.0",
    "ipython_pygments_lexers>=1.1.1",
    "jaraco.classes>=3.4.0",
    "jaraco.context>=6.0.1",
    "jaraco.functools>=4.3.0",
    "jedi>=0.19.2",
    "jeepney>=0.9.0",
    "jiter>=0.10.0",
    "joblib>=1.5.2",
    "jsonpatch>=1.33",
    "jsonpointer>=3.0.0",
    "jsonschema-path>=0.3.4",
    "jsonschema-specifications>=2025.9.1",
    "jsonschema>=4.25.1",
    "keyring>=25.7.0",
    "kiwisolver>=1.4.9",
    "langchain-core==0.3.75",
    "langchain-openai==0.3.32",
    "langchain-text-splitters==0.3.11",
    "langchain==0.3.27",
    "langsmith==0.4.27",
    "lightning-utilities>=0.15.2",
    "markdown-it-py>=4.0.0",
    "matplotlib-inline>=0.1.7",
    "matplotlib>=3.10.6",
    "mcp>=1.22.0",
    "mdurl>=0.1.2",
    "mdx-truly-sane-lists>=1.3",
    "more-itertools>=10.8.0",
    "mpmath>=1.3.0",
    "msgpack-numpy>=0.4.8",
    "msgpack>=1.1.1",
    "multidict>=6.6.4",
    "multiprocess>=0.70.18",
    "mygene>=3.2.2",
    "narwhals>=2.2.0",
    "networkx>=3.3",
    "numpy>=2.1.2",
    "openai>=1.107.0",
    "openapi-pydantic>=0.5.1",
    "orjson>=3.11.3",
    "packaging>=25.0",
    "pandas>=2.3.2",
    "parso>=0.8.5",
    "pathable>=0.4.4",
    "pathos>=0.3.4",
    "pathvalidate>=3.3.1",
    "peft>=0.17.1",
    "pexpect>=4.9.0",
    "pillow>=11.0.0",
    "platformdirs>=4.4.0",
    "plotly>=6.3.0",
    "pooch>=1.8.2",
    "pox>=0.3.6",
    "ppft>=1.7.7",
    "prompt_toolkit>=3.0.52",
    "propcache>=0.3.2",
    "protobuf>=6.32.0",
    "psutil>=7.0.0",
    "ptyprocess>=0.7.0",
    "pure_eval>=0.2.3",
    "py-key-value-aio>=0.2.8",
    "py-key-value-shared>=0.2.8",
    "pyarrow>=21.0.0",
    "pycparser>=2.23",
    "pydantic-settings>=2.12.0",
    "pydantic>=2.11.7",
    "pydantic_core>=2.33.2",
    "pydub>=0.25.1",
    "pyg_lib>=0.4.0",
    "pyparsing>=3.2.3",
    "pyperclip>=1.11.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "referencing>=0.36.2",
    "regex>=2025.8.29",
    "requests-toolbelt>=1.0.0",
    "requests>=2.32.5",
    "rich-rst>=1.3.2",
    "rich>=14.1.0",
    "rpds-py>=0.29.0",
    "ruff>=0.12.11",
    "safehttpx>=0.1.6",
    "safetensors>=0.6.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "semantic-version>=2.10.0",
    "sentencepiece>=0.2.1",
    "sentry-sdk>=2.35.1",
    "shellingham>=1.5.4",
    "six>=1.17.0",
    "smmap>=5.0.2",
    "sniffio>=1.3.1",
    "sortedcontainers>=2.4.0",
    "sse-starlette>=3.0.3",
    "stack-data>=0.6.3",
    "starlette>=0.47.3",
    "sympy>=1.13.3",
    "tenacity>=9.1.2",
    "threadpoolctl>=3.6.0",
    "tiktoken>=0.11.0",
    "tokenizers>=0.21.4",
    "tomli>=2.3.0",
    "tomlkit>=0.13.3",
    "tqdm>=4.67.1",
    "traitlets>=5.14.3",
    "transformers>=4.48.1",
    "triton>=3.4.0; sys_platform != 'win32'",
    "typer>=0.17.3",
    "typing-inspection>=0.4.1",
    "typing_extensions>=4.15.0",
    "tzdata>=2025.2",
    "urllib3>=2.5.0",
    "uvicorn>=0.35.0",
    "vplm>=0.0.1",
    "wandb>=0.21.3",
    "wcwidth>=0.2.13",
    "websockets>=15.0.1",
    "xxhash>=3.5.0",
    "yarl>=1.20.1",
    "zstandard>=0.24.0",
    "zstd>=1.5.7.2",
]
